--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$WAGMICE — The Cheesiest Meme Token</title>
+  <title>$WAGMICE — Solana Meme Token | 1B Supply | Pump.fun</title>
+  <meta name="description" content="$WAGMICE (WGM) is a viral Solana meme token with a 1 billion supply launched on Pump.fun. Join the cheese cult. No roadmap. Just vibes.">
+  <meta name="keywords" content="Solana meme token, pump.fun, WAGMICE, crypto meme coin, WGM, Solana token, funny crypto, cheese coin">
+  <meta name="author" content="WAGMICE Community">
+  <meta property="og:title" content="$WAGMICE — The Cheesiest Token on Solana">
+  <meta property="og:description" content="Meme token. 1 billion supply. Fair launch. Powered by rats, pumped by degenerates.">
+  <meta property="og:image" content="https://yourdomain.com/wagmice-logo.png">
+  <meta property="og:url" content="https://yourusername.github.io/wagmice-token-site/">
+  <meta name="twitter:card" content="summary_large_image">
+
   <style>
     body {
       background-color: #1a1a1a;
@@ -24,9 +33,10 @@
       font-weight: bold;
       font-size: 1.2rem;
       border-radius: 8px;
-      margin-top: 1rem;
+      margin: 1rem auto;
       cursor: pointer;
       text-decoration: none;
+      display: inline-block;
     }
     .meme-text {
       font-size: 1.1rem;
@@ -44,36 +54,38 @@
   </style>
 </head>
 <body>
-  <h1>$WAGMICE 🧀</h1>
-  <h2>The Cheesiest Token on Solana</h2>
-  <img src="wagmice-logo.png" alt="WAGMICE logo" />
-  <div class="meme-text">
-    "In Cheese We Trust. In Rugs We Bust."  
-  </div>
 
-  <!-- Looping WAGMICE GIF -->
-  <img class="gif" src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" alt="Cheese GIF" />
-
-  <p>
-    Created by rats. Pumped by degenerates.<br>
-    No roadmap. No promises. Just cheese. 🧀
-  </p>
-  <p>
-    🚀 Launched on Pump.fun<br>
-    💯 Fair Launch<br>
-    🧀 1 Billion Total Supply<br>
-    🐭 Early Rats Eat First
-  </p>
-
-  <!-- Meme-style Call to Action -->
-  <img class="gif" src="https://media.giphy.com/media/KzJkzjggfGN5Py6nkT/giphy.gif" alt="Meme Ad" />
-
+  <!-- BUY BUTTON AT THE TOP -->
   <a class="button" href="https://pump.fun/coin/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">
     🧀 Buy $WGM on Pump.fun
   </a>
 
-  <div class="links">
-    <p>Follow the cheese trail on <a href="https://x.com/prithviraj987" target="_blank">X (Twitter)</a></p>
+  <h1>$WAGMICE 🧀</h1>
+  <h2>Solana’s Cheesiest Meme Token</h2>
+  <img src="wagmice-logo.png" alt="WAGMICE logo" />
+  <div class="meme-text">
+    "In Cheese We Trust. In Rugs We Bust."
   </div>
+
+  <!-- Meme GIFs -->
+  <img class="gif" src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" alt="Cheese GIF" />
+  <img class="gif" src="https://media.giphy.com/media/KzJkzjggfGN5Py6nkT/giphy.gif" alt="Meme Ad" />
+
+  <p>
+    $WAGMICE is a fair-launched meme coin on <strong>Pump.fun</strong><br>
+    🧀 1 Billion Supply — No VC — No Presale<br>
+    🐭 Powered by rats. Pumped by degenerates.
+  </p>
+
+  <!-- Duplicate CTA at Bottom -->
+  <a class="button" href="https://pump.fun/coin/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">
+    Buy Now on Pump.fun 🚀
+  </a>
+
+  <div class="links">
+    <p>Follow us on <a href="https://x.com/prithviraj987" target="_blank">X (Twitter)</a></p>
+    <p>View on <a href="https://solscan.io/token/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4" target="_blank">Solscan</a></p>
+  </div>
+
 </body>
 </html>
