Update index game added.html

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
     🐭 Powered by rats. Pumped by degenerates.
   </p>
 
+  <!-- Cheese Clicker Iframe Inserted Here -->
+  <iframe src="cheese-clicker.html" width="100%" height="500" style="border:none;"></iframe>
+
   <!-- Duplicate CTA at Bottom -->
   <a class="button" href="https://pump.fun/coin/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">
     Buy Now on Pump.fun 🚀
