--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     "In Cheese We Trust. In Rugs We Bust."
   </div>
 
-  <!-- Meme GIFs   -->
+  <!-- Meme GIFs   
   <img class="gif" src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" alt="Cheese GIF" />
   <img class="gif" src="https://media.giphy.com/media/KzJkzjggfGN5Py6nkT/giphy.gif" alt="Meme Ad" />
-
+  -->
   <p>
     $WAGMICE is a fair-launched meme coin on <strong>Pump.fun</strong><br>
     🧀 1 Billion Supply — No VC — No Presale<br>
