--- a/cheese-clicker.html
+++ b/cheese-clicker.html
@@ -44,13 +44,17 @@
 </head>
 <body>
   <h1>🧀 Cheese Clicker</h1>
-  <p>Click the cheese! Earn $WGM if you reach 50!</p>
-  <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" id="cheese" alt="Cheese">
+  <p>Click the cheese below! Earn $WGM if you reach 50!</p>
+  <div>
+    <img src="wagmice-logo.png" id="cheese" alt="Cheese">
+  </div>
   <div id="score">Score: 0</div>
 
   <div id="submit">
     <p>Congrats! You reached 50 cheese! 🎉</p>
-    <a class="button" href="https://forms.gle/your-google-form-link" target="_blank">Submit Wallet for WGM</a>
+    <a class="button" href="https://forms.gle/Yxz5V9GAwzYaTZiPA" target="_blank">
+      Submit Your Solana Wallet for $WGM
+    </a>
   </div>
 
   <script>
