--- a/cheese-clicker.html
+++ b/cheese-clicker.html
@@ -52,7 +52,7 @@
 
   <div id="submit">
     <p>Congrats! You reached 50 cheese! 🎉</p>
-    <a class="button" href="https://forms.gle/Yxz5V9GAwzYaTZiPA" target="_blank">
+    <a class="button" href="https://forms.gle/VH7XZ5C19JmBhGVm6" target="_blank">
       Submit Your Solana Wallet for $WGM
     </a>
   </div>
