--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>$WAGMICE — Solana Meme Token | 1B Supply | Pump.fun</title>
+  <meta property="og:title" content="$WGM — WAGMICE: Solana's Cheesiest Token">
+<meta property="og:description" content="No roadmap. No VCs. Just cheese. Play the game, buy the token, meme your way to the moon.">
+<meta property="og:image" content="https://pb59.github.io/WagmiceToken/wagmice-logo.png">
+<meta property="og:url" content="https://pb59.github.io/WagmiceToken/">
+<meta name="twitter:card" content="summary_large_image">
+
   <meta name="description" content="$WAGMICE (WGM) is a viral Solana meme token with a 1 billion supply launched on Pump.fun. Join the cheese cult. No roadmap. Just vibes.">
   <meta name="keywords" content="Solana meme token, pump.fun, WAGMICE, crypto meme coin, WGM, Solana token, funny crypto, cheese coin">
   <meta name="author" content="WAGMICE Community">
