--- a/cheese-clicker.html
+++ b/cheese-clicker.html
@@ -1,109 +1,437 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Cheese Clicker - Earn $WGM</title>
-  <style>
-    body {
-      background-color: #1a1a1a;
-      color: #fff;
-      font-family: 'Comic Sans MS', cursive;
-      text-align: center;
-      padding: 2rem;
-    }
-    h1 {
-      color: #ffcc00;
-    }
-    #cheese {
-      width: 150px;
-      cursor: pointer;
-      transition: transform 0.1s ease;
-    }
-    #cheese:active {
-      transform: scale(0.95);
-    }
-    #score {
-      font-size: 2rem;
-      margin-top: 1rem;
-    }
-    #submit {
-      margin-top: 2rem;
-      display: none;
-    }
-    .button {
-      background-color: #ffaa00;
-      color: #000;
-      padding: 1rem 2rem;
-      border: none;
-      font-weight: bold;
-      font-size: 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-      margin-top: 1rem;
-    }
-    #muteBtn {
-      margin-top: 2rem;
-      background-color: #444;
-      color: #fff;
-      font-size: 0.9rem;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cheese Catcher</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-color: #60a5fa; /* Light blue sky */
+            font-family: 'Press+Start+2P', cursive;
+            color: #4b5563; /* Dark gray for text */
+            overflow: hidden;
+            touch-action: none; /* Disable browser touch gestures */
+        }
+
+        #gameContainer {
+            border: 5px solid #ca8a04; /* Cheese-yellow border */
+            border-radius: 15px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            position: relative;
+            background-color: #bfdbfe; /* Lighter blue for game area */
+            max-width: 95%;
+            max-height: 95vh;
+        }
+
+        canvas {
+            display: block;
+            border-radius: 10px;
+            max-width: 100%;
+            height: auto;
+        }
+
+        #uiContainer {
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+            width: 100%;
+        }
+
+        #scoreBoard {
+            font-size: 2em;
+            color: #f59e0b; /* Amber/Cheese color */
+            text-shadow: 2px 2px #854d0e; /* Darker shadow */
+        }
+
+        #missedCounter {
+            font-size: 1em;
+            color: #ef4444; /* Red for missed items */
+        }
+
+        #messageBox {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(250, 250, 240, 0.95); /* Creamy white */
+            color: #78350f; /* Brown text */
+            padding: 30px;
+            border-radius: 20px;
+            text-align: center;
+            z-index: 10;
+            border: 3px solid #facc15; /* Bright yellow border */
+            box-shadow: 0 0 25px rgba(250, 204, 21, 0.7);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 80%;
+            max-width: 450px;
+        }
+
+        #messageBox h2 {
+            margin-top: 0;
+            font-size: 2em;
+            color: #d97706; /* Darker yellow/orange */
+        }
+
+        #messageBox p {
+            font-size: 1.1em;
+            margin-bottom: 25px;
+        }
+
+        .gameButton {
+            background: linear-gradient(145deg, #f59e0b, #fbbf24); /* Yellow gradient */
+            color: #78350f; /* Brown text */
+            border: 2px solid #b45309; /* Dark orange border */
+            padding: 15px 30px;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 1.1em;
+            cursor: pointer;
+            border-radius: 12px;
+            box-shadow: 0 5px #854d0e;
+            transition: all 0.1s ease;
+            text-transform: uppercase;
+        }
+
+        .gameButton:hover {
+            background: linear-gradient(145deg, #fbbf24, #f59e0b);
+            box-shadow: 0 7px #854d0e;
+            transform: translateY(-2px);
+        }
+
+        .gameButton:active {
+            box-shadow: 0 3px #854d0e;
+            transform: translateY(0px);
+        }
+
+        /* Mouse and Cheese Styles (using emoji for simplicity) */
+        .emoji-char {
+            font-size: 24px; /* Base size, will be scaled in JS */
+            display: inline-block;
+        }
+
+
+        @media (max-width: 600px) {
+            #scoreBoard { font-size: 1.5em; }
+            #missedCounter { font-size: 0.9em; }
+            #messageBox h2 { font-size: 1.6em; }
+            #messageBox p { font-size: 1em; }
+            .gameButton { padding: 12px 24px; font-size: 1em; }
+            .emoji-char { font-size: 20px; }
+        }
+         @media (max-height: 500px) {
+            #uiContainer { margin-top: 10px; }
+            #scoreBoard { font-size: 1.2em; }
+        }
+
+    </style>
 </head>
 <body>
-  <h1>🧀 Cheese Clicker</h1>
-  <p>Click the cheese below! Earn $WGM if you reach 50!</p>
-  <div>
-    <img src="wagmice-logo.png" id="cheese" alt="Cheese">
-  </div>
-  <div id="score">Score: 0</div>
+    <div id="gameContainer">
+        <canvas id="gameCanvas"></canvas>
+        <div id="messageBox">
+            <h2 id="messageTitle">Cheese Catcher!</h2>
+            <p id="messageText">Move the mouse to catch the falling cheese! 🧀<br>Don't miss too many!</p>
+            <button id="startButton" class="gameButton">Start Game</button>
+        </div>
+    </div>
+    <div id="uiContainer">
+        <div id="scoreBoard">Score: 0</div>
+        <div id="missedCounter">Missed: 0 / 5</div>
+    </div>
 
-  <div id="submit">
-    <p>Congrats! You reached 50 cheese! 🎉</p>
-    <a class="button" href="https://forms.gle/Yxz5V9GAwzYaTZiPA" target="_blank">
-      Submit Your Solana Wallet for $WGM
-    </a>
-  </div>
+    <script>
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
+        const scoreBoard = document.getElementById('scoreBoard');
+        const missedCounterDisplay = document.getElementById('missedCounter');
+        const messageBox = document.getElementById('messageBox');
+        const messageTitle = document.getElementById('messageTitle');
+        const messageText = document.getElementById('messageText');
+        const startButton = document.getElementById('startButton');
+        const gameContainer = document.getElementById('gameContainer');
 
-  <!-- 🎵 Audio Elements -->
-  <audio id="chomp" src="cheese-chomp.mp3" preload="auto"></audio>
-  <audio id="win" src="win.mp3" preload="auto"></audio>
-  <audio id="bg" src="background-music.mp3" preload="auto" loop></audio>
+        // Game state
+        let player;
+        let cheeses = [];
+        let score = 0;
+        let missed = 0;
+        const maxMissed = 5;
+        let cheeseFallSpeed = 2;
+        let cheeseSpawnInterval = 1500; // ms
+        let lastCheeseSpawnTime = 0;
+        let gameOver = true;
+        let animationFrameId;
+        let lastTime = 0;
+        let difficultyTimer = 0;
+        const difficultyInterval = 15000; // Increase difficulty every 15s
 
-  <!-- 🔇 Mute Button -->
-  <button class="button" id="muteBtn">🔊 Mute Music</button>
+        // Object properties - these will be scaled
+        const playerBaseWidth = 50;
+        const playerBaseHeight = 40;
+        const cheeseBaseSize = 30;
 
-  <script>
-    let score = 0;
-    const cheese = document.getElementById('cheese');
-    const scoreBoard = document.getElementById('score');
-    const submitDiv = document.getElementById('submit');
-    const chompSound = document.getElementById('chomp');
-    const winSound = document.getElementById('win');
-    const bgMusic = document.getElementById('bg');
-    const muteBtn = document.getElementById('muteBtn');
+        let playerWidth = playerBaseWidth;
+        let playerHeight = playerBaseHeight;
+        let cheeseSize = cheeseBaseSize; // Used as width and height for cheese emoji
 
-    // Start background music on load
-    window.addEventListener('load', () => {
-      bgMusic.volume = 0.2;
-      bgMusic.play().catch(() => {}); // prevents autoplay errors
-    });
+        // Mouse/Touch position
+        let targetPlayerX = canvas.width / 2;
 
-    cheese.addEventListener('click', () => {
-      score++;
-      scoreBoard.textContent = 'Score: ' + score;
-      chompSound.currentTime = 0;
-      chompSound.play();
+        // Emojis
+        const MOUSE_EMOJI = '🐭';
+        const CHEESE_EMOJI = '🧀';
 
-      if (score === 50) {
-        winSound.play();
-        submitDiv.style.display = 'block';
-      }
-    });
+        // --- Player (Mouse) Class ---
+        class Player {
+            constructor(x, y, width, height, emoji) {
+                this.x = x;
+                this.y = y;
+                this.width = width;
+                this.height = height;
+                this.emoji = emoji;
+            }
 
-    muteBtn.addEventListener('click', () => {
-      bgMusic.muted = !bgMusic.muted;
-      muteBtn.textContent = bgMusic.muted ? '🔇 Unmute Music' : '🔊 Mute Music';
-    });
-  </script>
+            draw() {
+                ctx.font = `${this.height * 0.8}px Arial`; // Adjust emoji size slightly smaller than height
+                ctx.textAlign = 'center';
+                ctx.textBaseline = 'middle';
+                ctx.fillText(this.emoji, this.x + this.width / 2, this.y + this.height / 2);
+            }
+
+            update() {
+                // Smoothly move player towards targetPlayerX (set by mouse/touch)
+                const easing = 0.3;
+                this.x += (targetPlayerX - (this.x + this.width / 2)) * easing;
+
+
+                // Keep player within canvas bounds
+                if (this.x < 0) this.x = 0;
+                if (this.x + this.width > canvas.width) this.x = canvas.width - this.width;
+            }
+        }
+
+        // --- Cheese Class ---
+        class Cheese {
+            constructor(x, y, size, emoji, speed) {
+                this.x = x;
+                this.y = y;
+                this.size = size; // Emoji will be roughly this square size
+                this.emoji = emoji;
+                this.speed = speed;
+            }
+
+            draw() {
+                ctx.font = `${this.size * 0.8}px Arial`;
+                ctx.textAlign = 'center';
+                ctx.textBaseline = 'middle';
+                ctx.fillText(this.emoji, this.x + this.size / 2, this.y + this.size / 2);
+            }
+
+            update() {
+                this.y += this.speed;
+            }
+        }
+
+        // --- Game Functions ---
+        function setCanvasAndElementSizes() {
+            const containerRect = gameContainer.getBoundingClientRect();
+            let newWidth = containerRect.width - 10; // Account for border
+            let newHeight = window.innerHeight * 0.6;
+
+            newHeight = Math.min(newHeight, newWidth * 0.8); // Aspect ratio cap
+            newWidth = Math.min(newWidth, 700);
+            newHeight = Math.min(newHeight, 550);
+
+            canvas.width = newWidth;
+            canvas.height = newHeight;
+
+            // Scale game elements based on canvas size
+            const scaleFactor = Math.min(canvas.width / 600, canvas.height / 400);
+            playerWidth = playerBaseWidth * scaleFactor;
+            playerHeight = playerBaseHeight * scaleFactor;
+            cheeseSize = cheeseBaseSize * scaleFactor;
+
+            // Update player position if it exists (e.g., on resize during game)
+            if (player) {
+                player.y = canvas.height - player.height - 10; // Keep at bottom
+                player.width = playerWidth;
+                player.height = playerHeight;
+            }
+            if (gameOver) {
+                targetPlayerX = canvas.width / 2;
+            }
+        }
+
+        function initGame() {
+            setCanvasAndElementSizes();
+
+            player = new Player(
+                canvas.width / 2 - playerWidth / 2,
+                canvas.height - playerHeight - 10, // Position at bottom
+                playerWidth,
+                playerHeight,
+                MOUSE_EMOJI
+            );
+            targetPlayerX = canvas.width / 2; // Center the target initially
+
+            cheeses = [];
+            score = 0;
+            missed = 0;
+            cheeseFallSpeed = 2 * (canvas.height / 400); // Scale speed slightly with canvas size
+            cheeseSpawnInterval = 1500;
+            lastCheeseSpawnTime = performance.now();
+            difficultyTimer = 0;
+            gameOver = false;
+            lastTime = performance.now();
+
+            updateScoreboard();
+            updateMissedCounter();
+            messageBox.style.display = 'none';
+            if (animationFrameId) cancelAnimationFrame(animationFrameId);
+            gameLoop();
+        }
+
+        function spawnCheese() {
+            const currentTime = performance.now();
+            if (currentTime - lastCheeseSpawnTime > cheeseSpawnInterval) {
+                lastCheeseSpawnTime = currentTime;
+                const x = Math.random() * (canvas.width - cheeseSize);
+                const y = -cheeseSize; // Start just above the screen
+                cheeses.push(new Cheese(x, y, cheeseSize, CHEESE_EMOJI, cheeseFallSpeed));
+            }
+        }
+
+        function updateAndDrawCheeses() {
+            for (let i = cheeses.length - 1; i >= 0; i--) {
+                const cheese = cheeses[i];
+                cheese.update();
+                cheese.draw();
+
+                // Check for collision with player
+                if (
+                    cheese.x < player.x + player.width &&
+                    cheese.x + cheese.size > player.x &&
+                    cheese.y < player.y + player.height &&
+                    cheese.y + cheese.size > player.y
+                ) {
+                    cheeses.splice(i, 1); // Remove caught cheese
+                    score += 10;
+                    updateScoreboard();
+                    // Add a little "catch" animation or sound effect here if desired
+                }
+                // Check if cheese is missed (goes below screen)
+                else if (cheese.y > canvas.height) {
+                    cheeses.splice(i, 1); // Remove missed cheese
+                    missed++;
+                    updateMissedCounter();
+                    if (missed >= maxMissed) {
+                        gameOver = true;
+                    }
+                }
+            }
+        }
+
+        function updateScoreboard() {
+            scoreBoard.textContent = `Score: ${score}`;
+        }
+        function updateMissedCounter() {
+            missedCounterDisplay.textContent = `Missed: ${missed} / ${maxMissed}`;
+        }
+
+
+        function increaseDifficulty(deltaTime) {
+            difficultyTimer += deltaTime;
+            if (difficultyTimer >= difficultyInterval) {
+                difficultyTimer = 0;
+                cheeseFallSpeed += 0.3 * (canvas.height / 400);
+                if (cheeseSpawnInterval > 600) {
+                    cheeseSpawnInterval -= 100;
+                }
+                // console.log(`Difficulty: Speed ${cheeseFallSpeed.toFixed(1)}, Interval ${cheeseSpawnInterval}`);
+            }
+        }
+
+        function showGameOverScreen() {
+            messageTitle.textContent = 'Game Over!';
+            messageText.innerHTML = `🧀 You caught ${score / 10} cheeses! 🧀<br>Final Score: ${score}`;
+            startButton.textContent = 'Play Again?';
+            messageBox.style.display = 'flex';
+        }
+
+        function gameLoop(timestamp) {
+            if (gameOver) {
+                showGameOverScreen();
+                return;
+            }
+
+            const deltaTime = timestamp - lastTime;
+            lastTime = timestamp;
+
+            ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear canvas
+
+            // Update and Draw Player
+            player.update();
+            player.draw();
+
+            // Spawn, Update, and Draw Cheeses
+            spawnCheese();
+            updateAndDrawCheeses(); // Also handles collisions and misses
+
+            // Update score (already handled in collision) and difficulty
+            increaseDifficulty(deltaTime);
+
+            animationFrameId = requestAnimationFrame(gameLoop);
+        }
+
+        // --- Event Listeners ---
+        function handleInput(eventClientX) {
+            const rect = canvas.getBoundingClientRect();
+            targetPlayerX = eventClientX - rect.left;
+        }
+
+        canvas.addEventListener('mousemove', (e) => handleInput(e.clientX));
+        canvas.addEventListener('touchmove', (e) => {
+            e.preventDefault();
+            if (e.touches.length > 0) handleInput(e.touches[0].clientX);
+        }, { passive: false });
+         canvas.addEventListener('touchstart', (e) => {
+            e.preventDefault();
+            if (e.touches.length > 0) handleInput(e.touches[0].clientX);
+        }, { passive: false });
+
+
+        startButton.addEventListener('click', () => {
+            if (gameOver) initGame();
+        });
+
+        window.addEventListener('resize', () => {
+            setCanvasAndElementSizes();
+            if (player && !gameOver) {
+                player.x = Math.max(0, Math.min(canvas.width - player.width, player.x));
+                 targetPlayerX = player.x + player.width / 2; // Re-center target if player moved
+            } else if (gameOver) {
+                // Message box will cover, but good to ensure canvas is redrawn if needed
+                // For this game, just resizing is enough for the start/end screen.
+            }
+        });
+
+        // Initial Setup
+        window.onload = () => {
+            setCanvasAndElementSizes();
+            targetPlayerX = canvas.width / 2; // Initialize target for player
+            messageBox.style.display = 'flex';
+        };
+    </script>
 </body>
 </html>
