--- a/cheese-clicker.html
+++ b/cheese-clicker.html
@@ -27,8 +27,8 @@
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
             position: relative;
             background-color: #bfdbfe; /* Lighter blue for game area */
-            max-width: 95%;
-            max-height: 95vh;
+            max-width: 100vw;
+            max-height: 98vh;
         }
 
         canvas {
@@ -251,8 +251,8 @@
             let newHeight = window.innerHeight * 0.6;
 
             newHeight = Math.min(newHeight, newWidth * 0.8); // Aspect ratio cap
-            newWidth = Math.min(newWidth, 700);
-            newHeight = Math.min(newHeight, 550);
+            newWidth = Math.min(newWidth, 900);
+            newHeight = Math.min(newHeight, 750);
 
             canvas.width = newWidth;
             canvas.height = newHeight;
