--- a/index.html
+++ b/index.html
@@ -83,8 +83,14 @@
     🐭 Powered by rats. Pumped by degenerates.
   </p>
 
-  <!-- Cheese Clicker Iframe Inserted Here -->
-  <iframe src="cheese-clicker.html" width="100%" height="500" style="border:none;"></iframe>
+  <!-- Cheese Clicker Iframe Inserted Here
+  <iframe src="cheese-clicker.html" width="100%" height="500" style="border:none;"></iframe>  -->
+
+<!-- Game Section -->
+<section>
+  <h2>Game</h2>
+  <button class="button" onclick="window.open('cheese-clicker.html', '_blank')">Cheese Clicker</button>
+</section>  
 
   <!-- Duplicate CTA at Bottom -->
   <a class="button" href="https://pump.fun/coin/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">
