--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
       <button class="flashy-cheese-btn" onclick="window.open('cheese-clicker.html', '_blank')">
         🧀 Play Cheese Clicker!
       </button>
+      <button class="flashy-cheese-btn" onclick="window.open('CheeseShooter.html', '_blank')">
+  🧀 Play Cheese Shooter 2!
+</button>
+      
     </aside>
 
     <!-- Main Content -->
