--- a/CheeseShooter1.html
+++ b/CheeseShooter1.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheese Catcher Deluxe Animation!</title> <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
+        #uiContainer {
+    margin-top: 60px;  /* Increase this value as needed */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    width: 100%;
+}
         body {
             margin: 0;
             padding: 0;
