--- a/CheeseShooter1.html
+++ b/CheeseShooter1.html
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheese Catcher Deluxe Animation!</title> <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
-        #uiContainer {
-    margin-top: 60px;  /* Increase this value as needed */
+       #uiContainer {
+    position: fixed;
+    top: 80px;        /* Adjust as needed */
+    left: 20px;       /* Adjust as needed */
+    width: 180px;     /* Or your preferred width */
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 15px;
-    width: 100%;
+    z-index: 100;
+    background: rgba(250,250,240,0.85); /* Optional for contrast */
+    border-radius: 12px;                /* Optional */
+    padding: 10px 16px;                 /* Optional */
+    box-shadow: 0 2px 8px rgba(0,0,0,0.08); /* Optional */
 }
         body {
             margin: 0;
@@ -54,7 +61,8 @@
         #scoreBoard {
             font-size: 2em;
             color: #f59e0b; /* Orange score */
-            text-shadow: 2px 2px #854d0e; /* Dark orange shadow */
+            text-shadow: 2p
+                x 2px #854d0e; /* Dark orange shadow */
         }
         #missedCounter {
             font-size: 1em;
