--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta name="author" content="WAGMICE Community">
   <meta property="og:title" content="$WAGMICE — The Cheesiest Token on Solana">
   <meta property="og:description" content="Meme token. 1 billion supply. Fair launch. Powered by rats, pumped by degenerates.">
-  <meta property="og:image" content="https://yourdomain.com/wagmice-logo.png">
-  <meta property="og:url" content="https://yourusername.github.io/wagmice-token-site/">
+  <meta property="og:image" content="https://github.com/pb59/WagmiceToken/blob/main/wagmice-logo.png">
+  <meta property="og:url" content="https://pb59.github.io/WagmiceToken/">
   <meta name="twitter:card" content="summary_large_image">
 
   <style>
