--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 
   <style>
     body {
+
+      <section id="community" style="text-align: center; padding: 40px 20px; background-color: #fdf6e3;">
+  <h2 style="font-family: 'Press Start 2P', cursive; color: #0088cc;">📢 Join the WAGMICE Army</h2>
+  <p style="font-size: 1.1em; color: #333;">Chat. Meme. Moon. Connect with fellow $WGM believers on Telegram!</p>
+  <a href="https://t.me/wagmice" target="_blank" style="background-color: #0088cc; color: white; padding: 12px 24px; border-radius: 10px; font-weight: bold; text-decoration: none; display: inline-block; margin-top: 15px;">
+    🚀 Join Us on Telegram
+  </a>
+</section>
       background-color: #1a1a1a;
       color: #fff;
       font-family: 'Comic Sans MS', cursive, sans-serif;
