--- a/index.html
+++ b/index.html
@@ -232,13 +232,22 @@
       </div>
     </section>
   </div>
+<section id="community" style="text-align: center; padding: 40px 20px; background-color: #fdf6e3;">
+  <h2 style="font-family: 'Press Start 2P', cursive; color: #0088cc;">📢 Join the WAGMICE Army</h2>
+  <p style="font-size: 1.1em; color: #333;">Chat. Meme. Moon. Connect with fellow $WGM believers on Telegram!</p>
+  <a href="https://t.me/wagmice" target="_blank" style="background-color: #0088cc; color: white; padding: 12px 24px; border-radius: 10px; font-weight: bold; text-decoration: none; display: inline-block; margin: 8px;">
+    🚀 Join Us on Telegram (Original)
+  </a>
+  <a href="https://t.me/WAGMICE" target="_blank" style="background-color: #229ED9; color: white; padding: 12px 24px; border-radius: 10px; font-weight: bold; text-decoration: none; display: inline-block; margin: 8px;">
+    🌐 Join Public Telegram Community
+  </a>
+  <a href="https://t.me/WAGMICEpvt" target="_blank" style="background-color: #0088cc; color: white; padding: 12px 24px; border-radius: 10px; font-weight: bold; text-decoration: none; display: inline-block; margin: 8px;">
+    🔒 Join Private Telegram Group
+  </a>
+  <p style="margin-top:20px; font-size:1em; color:#222;">
+    📧 Contact Us: <a href="mailto:wagmice555@gamil.com" style="color:#0088cc;">wagmice555@gamil.com</a>
+  </p>
+</section>
 
-  <section id="community" style="text-align: center; padding: 40px 20px; background-color: #fdf6e3;">
-    <h2 style="font-family: 'Press Start 2P', cursive; color: #0088cc;">📢 Join the WAGMICE Army</h2>
-    <p style="font-size: 1.1em; color: #333;">Chat. Meme. Moon. Connect with fellow $WGM believers on Telegram!</p>
-    <a href="https://t.me/wagmice" target="_blank" style="background-color: #0088cc; color: white; padding: 12px 24px; border-radius: 10px; font-weight: bold; text-decoration: none; display: inline-block; margin-top: 15px;">
-      🚀 Join Us on Telegram
-    </a>
-  </section>
 </body>
 </html>
