--- a/index.html
+++ b/index.html
@@ -182,9 +182,10 @@
   <a class="button" href="https://pump.fun/coin/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">
     🧀 Buy $WGM on Pump.fun
   </a>
-<div style="position: fixed; top: 0; right: 0; width: 400px; height: 100vh; background: #fff; z-index: 1000; box-shadow: -2px 0 8px rgba(0,0,0,0.1);">
-  <iframe src="https://dexscreener.com/solana/dhfjzuaunulez8uskyhavpweu2cobh5tj8bm8gzkwupx" width="100%" height="100%" frameborder="0"></iframe>
-</div>
+<a class="button" href="https://dexscreener.com/solana/dhfjzuaunulez8uskyhavpweu2cobh5tj8bm8gzkwupx" target="_blank">
+  View on DEXScreener
+</a>
+
   <div class="main-layout">
     <!-- Left Side: Game/Ad Section -->
     <aside class="left-section">
