--- a/index.html
+++ b/index.html
@@ -277,6 +277,15 @@
   </style>
 </head>
 <body>
+<!-- Social & Navigation Links for SEO and UX -->
+<p>🌐 <strong>Main Site:</strong> <a href="https://pb59.github.io/WagmiceToken/" target="_blank">pb59.github.io/WagmiceToken</a></p>
+<p>📈 <strong>Token Explorer (Solscan):</strong> <a href="https://solscan.io/token/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">View on Solscan</a></p>
+<p>💰 <strong>Buy on Pump.fun:</strong> <a href="https://pump.fun/coin/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">Buy WAGMICE</a></p>
+<p>💹 <strong>Swap on Raydium:</strong> <a href="https://raydium.io/swap/?inputMint=sol&outputMint=4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">Trade on Raydium</a></p>
+<p>🎮 <strong>Play the Game:</strong> <a href="https://pb59.github.io/WagmiceToken/cheese-clicker.html" target="_blank">Cheese Clicker</a></p>
+<p>🐦 <strong>Follow us on X:</strong> <a href="https://x.com/wagmice" target="_blank">@wagmice</a></p>
+
+  
 
   <a class="button" href="https://pump.fun/coin/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">
     🧀 Buy $WGM on Pump.fun
