--- a/index.html
+++ b/index.html
@@ -277,14 +277,6 @@
   </style>
 </head>
 <body>
-<!-- Social & Navigation Links for SEO and UX -->
-<p>🌐 <strong>Main Site:</strong> <a href="https://pb59.github.io/WagmiceToken/" target="_blank">pb59.github.io/WagmiceToken</a></p>
-<p>📈 <strong>Token Explorer (Solscan):</strong> <a href="https://solscan.io/token/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">View on Solscan</a></p>
-<p>💰 <strong>Buy on Pump.fun:</strong> <a href="https://pump.fun/coin/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">Buy WAGMICE</a></p>
-<p>💹 <strong>Swap on Raydium:</strong> <a href="https://raydium.io/swap/?inputMint=sol&outputMint=4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">Trade on Raydium</a></p>
-<p>🎮 <strong>Play the Game:</strong> <a href="https://pb59.github.io/WagmiceToken/cheese-clicker.html" target="_blank">Cheese Clicker</a></p>
-<p>🐦 <strong>Follow us on X:</strong> <a href="https://x.com/wagmice" target="_blank">@wagmice</a></p>
-
   <div id="solana-ticker" style="background:#111; color:#00ffa3; padding:10px; text-align:center; font-family:monospace;">
   Loading SOL price...
 </div>
@@ -355,6 +347,15 @@
         <p>View on <a href="https://solscan.io/token/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4" target="_blank">Solscan</a></p>
       </div>
     </section>
+    <div class="sidebar">
+      <p>🌐 <strong>Main Site:</strong> <a href="https://pb59.github.io/WagmiceToken/" target="_blank">pb59.github.io/WagmiceToken</a></p>
+      <p>📈 <strong>Token Explorer (Solscan):</strong> <a href="https://solscan.io/token/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">View on Solscan</a></p>
+      <p>💰 <strong>Buy on Pump.fun:</strong> <a href="https://pump.fun/coin/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">Buy WAGMICE</a></p>
+      <p>💹 <strong>Swap on Raydium:</strong> <a href="https://raydium.io/swap/?inputMint=sol&outputMint=4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">Trade on Raydium</a></p>
+      <p>🎮 <strong>Play the Game:</strong> <a href="https://pb59.github.io/WagmiceToken/cheese-clicker.html" target="_blank">Cheese Clicker</a></p>
+      <p>🐦 <strong>Follow us on X:</strong> <a href="https://x.com/wagmice" target="_blank">@wagmice</a></p>
+    </div>
+    
   </div>
   
   <section id="community">
