--- a/index.html
+++ b/index.html
@@ -304,6 +304,9 @@
   <a class="button" href="https://dexscreener.com/solana/dhfjzuaunulez8uskyhavpweu2cobh5tj8bm8gzkwupx" target="_blank">
     📈 View on DEXScreener
   </a>
+  <a class="button" href="https://raydium.io/swap/?inputMint=sol&outputMint=4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">
+  💹 Buy on Raydium
+</a>
 
   <div class="main-layout">
     <aside class="left-section">
