--- a/index.html
+++ b/index.html
@@ -296,7 +296,9 @@
   setInterval(updateSolanaPrice, 60000); // update every 60 seconds
 </script>
 
-  
+  <a class="button" href="https://jup.ag/swap/SOL-4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">
+  🚀 Buy on Jupiter
+</a>
 
   <a class="button" href="https://pump.fun/coin/4KJkZRraHqGH7WX2oih3LnYnVjp6zP667otMahq4pump" target="_blank">
     🧀 Buy $WGM on Pump.fun
