--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+    <meta charset="UTF-8">
+  <title>$WAGMICE — Solana Meme Token | 1B Supply | Pump.fun</title>
+  <!-- ... other meta tags ... -->
+  <link rel="icon" type="image/png" href="wagmice-logo.png">
+  <!-- ... rest of your head ... -->
   <title>$WAGMICE — Solana Meme Token | 1B Supply | Pump.fun</title>
   <meta name="description" content="$WAGMICE (WGM) is a viral Solana meme token with a 1 billion supply launched on Pump.fun. Join the cheese cult. No roadmap. Just vibes. Play the game, buy the token, meme your way to the moon.">
   <meta name="keywords" content="Solana meme token, pump.fun, WAGMICE, crypto meme coin, WGM, Solana token, funny crypto, cheese coin, meme game">
